--- a/LevelOne/Portfolio/index.html
+++ b/LevelOne/Portfolio/index.html
@@ -53,8 +53,15 @@
         <button class="link link-secondary">Read Blogs</button>
       </a>
     </section>
+    <section class="section">
+      <h1>Resume</h1>
+      <a
+        href="https://drive.google.com/file/d/1O7QmQOj4zogvwyld2NozEkugf4sIYhPh/view?usp=sharing"
+        >Click Here To View The Resume</a
+      >
+    </section>
     <footer class="footer">
-      <h2>Social Media Presence</h2>
+      <h2>Contact</h2>
       <ul>
         <li><a class="link" href="https://github.com/prabalsh19">Github</a></li>
         <li>
@@ -66,6 +73,7 @@
           >
         </li>
       </ul>
+      <p>Copyright ©2023. All rights reserved.</p>
     </footer>
   </body>
 </html>
